# MutableZip

./: CHANGELOG.md  DOCS.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: readme.md
DOCS/mutablezip/: index.md
documentation/reference/: README.md
documentation/reference/mutablezip/: index.md
mutablezip/: __init__.py
tests/: test_main.py
